--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,8 +37,8 @@
     color: black;
 }
 
-.item-1 { background-color: rgba(0, 0, 0, 0.1); }  /* Голубой */
-.item-2 { background-color: rgba(0, 128, 0, 0.3); }   /* Салатовый */
-.item-3 { background-color: rgba(0, 0, 0, 0.3); }  /* Розовый */
-.item-4 { background-color: rgba(255, 165, 0, 0.3); }  /* Желтый */
-.item-5 { background-color: rgba(255, 0, 0, 0.3); }  /* Фиолетовый */
+.item-1 { background-color: rgba(0, 0, 0, 0.1); } 
+.item-2 { background-color: rgba(0, 128, 0, 0.3); }   
+.item-3 { background-color: rgba(0, 0, 0, 0.3); }  
+.item-4 { background-color: rgba(255, 165, 0, 0.3); }  
+.item-5 { background-color: rgba(255, 0, 0, 0.3); }  
